tests/langs/snapshots/r#mod__langs__base.json_integer_numbers.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
snapshot_kind: text
---
- n: 9
  l: "  \"age\": 30,\n"
  m: "           ^^   "
- n: 20
  l: "    [1, 2, 3],\n"
  m: "     ^          "
- n: 20
  l: "    [1, 2, 3],\n"
  m: "        ^       "
- n: 20
  l: "    [1, 2, 3],\n"
  m: "           ^    "
- n: 21
  l: "    [4, 5, 6],\n"
  m: "     ^          "
- n: 21
  l: "    [4, 5, 6],\n"
  m: "        ^       "
- n: 21
  l: "    [4, 5, 6],\n"
  m: "           ^    "
- n: 22
  l: "    [7, 8, 9]\n"
  m: "     ^         "
- n: 22
  l: "    [7, 8, 9]\n"
  m: "        ^      "
- n: 22
  l: "    [7, 8, 9]\n"
  m: "           ^   "
- n: 29
  l: "    {\"type\": \"user\", \"id\": 1},\n"
  m: "                                 ^    "
- n: 30
  l: "    {\"type\": \"admin\", \"id\": 2},\n"
  m: "                                  ^    "
- n: 31
  l: "    {\"type\": \"guest\", \"id\": 3}\n"
  m: "                                  ^   "
- n: 45
  l: "  \"count\": 42,\n"
  m: "             ^^   "
- n: 88
  l: "  \"int_val\": 42,\n"
  m: "               ^^   "
- n: 93
  l: "  \"array_val\": [1, 2, 3]\n"
  m: "                  ^         "
- n: 93
  l: "  \"array_val\": [1, 2, 3]\n"
  m: "                     ^      "
- n: 93
  l: "  \"array_val\": [1, 2, 3]\n"
  m: "                        ^   "
- n: 101
  l: "      \"age\": 30\n"
  m: "               ^^  "
- n: 113
  l: "    [1, 2],\n"
  m: "     ^       "
- n: 113
  l: "    [1, 2],\n"
  m: "        ^    "
- n: 114
  l: "    [3, 4],\n"
  m: "     ^       "
- n: 114
  l: "    [3, 4],\n"
  m: "        ^    "
- n: 115
  l: "    [5, 6]\n"
  m: "     ^      "
- n: 115
  l: "    [5, 6]\n"
  m: "        ^   "
- n: 125
  l: "[\"first\", {\"type\": \"mixed\"}, [1, 2, 3]]\n"
  m: "                                    ^          "
- n: 125
  l: "[\"first\", {\"type\": \"mixed\"}, [1, 2, 3]]\n"
  m: "                                       ^       "
- n: 125
  l: "[\"first\", {\"type\": \"mixed\"}, [1, 2, 3]]\n"
  m: "                                          ^    "
- n: 130
  l: "    \"id\": 1,\n"
  m: "            ^   "
- n: 134
  l: "    \"id\": 2,\n"
  m: "            ^   "
- n: 141
  l: "  \"scores\": [10, 20, 30, 40, 50]\n"
  m: "               ^^                   "
- n: 141
  l: "  \"scores\": [10, 20, 30, 40, 50]\n"
  m: "                   ^^               "
- n: 141
  l: "  \"scores\": [10, 20, 30, 40, 50]\n"
  m: "                       ^^           "
- n: 141
  l: "  \"scores\": [10, 20, 30, 40, 50]\n"
  m: "                           ^^       "
- n: 141
  l: "  \"scores\": [10, 20, 30, 40, 50]\n"
  m: "                               ^^   "
