tests/langs/snapshots/r#mod__langs__base.json_nested_arrays.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 19
  l: "  \"outer\": [\n"
  m: "             ^^^"
- n: 20
  l: "    [1, 2, 3],\n"
  m: ^^^^^^^^^^^^^^^^
- n: 21
  l: "    [4, 5, 6],\n"
  m: ^^^^^^^^^^^^^^^^
- n: 22
  l: "    [7, 8, 9]\n"
  m: ^^^^^^^^^^^^^^^
- n: 23
  l: "  ]\n"
  m: "^^^  "
- n: 112
  l: "  \"matrix\": [\n"
  m: "              ^^^"
- n: 113
  l: "    [1, 2],\n"
  m: ^^^^^^^^^^^^^
- n: 114
  l: "    [3, 4],\n"
  m: ^^^^^^^^^^^^^
- n: 115
  l: "    [5, 6]\n"
  m: ^^^^^^^^^^^^
- n: 116
  l: "  ]\n"
  m: "^^^  "
