tests/langs/snapshots/r#mod__langs__base.json_nested_objects.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 7
  l: "{\n"
  m: ^^^
- n: 8
  l: "  \"name\": \"John Doe\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 9
  l: "  \"age\": 30,\n"
  m: ^^^^^^^^^^^^^^^^
- n: 10
  l: "  \"address\": {\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 11
  l: "    \"street\": \"123 Main St\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 12
  l: "    \"city\": \"Springfield\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 13
  l: "    \"state\": \"IL\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^
- n: 14
  l: "  }\n"
  m: ^^^^^
- n: 15
  l: "}\n"
  m: "^  "
- n: 86
  l: "{\n"
  m: ^^^
- n: 87
  l: "  \"string_val\": \"text\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 88
  l: "  \"int_val\": 42,\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 89
  l: "  \"float_val\": 3.14,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^
- n: 90
  l: "  \"bool_val\": true,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^
- n: 91
  l: "  \"null_val\": null,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^
- n: 92
  l: "  \"object_val\": {\"key\": \"value\"},\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 93
  l: "  \"array_val\": [1, 2, 3]\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 94
  l: "}\n"
  m: "^  "
- n: 97
  l: "{\n"
  m: ^^^
- n: 98
  l: "  \"user\": {\n"
  m: ^^^^^^^^^^^^^^^
- n: 99
  l: "    \"profile\": {\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 100
  l: "      \"name\": \"John\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 101
  l: "      \"age\": 30\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 102
  l: "    }\n"
  m: ^^^^^^^
- n: 103
  l: "  },\n"
  m: ^^^^^^
- n: 104
  l: "  \"settings\": {\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 105
  l: "    \"theme\": \"dark\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 106
  l: "    \"notifications\": true\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 107
  l: "  }\n"
  m: ^^^^^
- n: 108
  l: "}\n"
  m: "^  "
- n: 120
  l: "{\n"
  m: ^^^
- n: 121
  l: "  \"empty_obj\": {}\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 122
  l: "}\n"
  m: "^  "
- n: 152
  l: "{\n"
  m: ^^^
- n: 153
  l: "  \"project\": {\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 154
  l: "    \"name\": \"Test Project\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 155
  l: "    \"settings\": {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 156
  l: "      \"enabled\": true,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 157
  l: "      \"priority\": \"high\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 158
  l: "    },\n"
  m: ^^^^^^^^
- n: 159
  l: "    \"team\": [\n"
  m: ^^^^^^^^^^^^^^^^^
- n: 160
  l: "      {\n"
  m: ^^^^^^^^^
- n: 161
  l: "        \"name\": \"Alice\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 162
  l: "        \"role\": \"lead\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 163
  l: "      },\n"
  m: ^^^^^^^^^^
- n: 164
  l: "      {\n"
  m: ^^^^^^^^^
- n: 165
  l: "        \"name\": \"Bob\",\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 166
  l: "        \"role\": \"developer\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 167
  l: "      }\n"
  m: ^^^^^^^^^
- n: 168
  l: "    ]\n"
  m: ^^^^^^^
- n: 169
  l: "  }\n"
  m: ^^^^^
- n: 170
  l: "}"
  m: ^
