tests/langs/snapshots/r#mod__langs__base.json_strings.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
snapshot_kind: text
---
- n: 8
  l: "  \"name\": \"John Doe\",\n"
  m: "  ^^^^^^^^                 "
- n: 8
  l: "  \"name\": \"John Doe\",\n"
  m: "            ^^^^^^^^^^^^   "
- n: 9
  l: "  \"age\": 30,\n"
  m: "  ^^^^^^^       "
- n: 10
  l: "  \"address\": {\n"
  m: "  ^^^^^^^^^^^     "
- n: 11
  l: "    \"street\": \"123 Main St\",\n"
  m: "    ^^^^^^^^^^                    "
- n: 11
  l: "    \"street\": \"123 Main St\",\n"
  m: "                ^^^^^^^^^^^^^^^   "
- n: 12
  l: "    \"city\": \"Springfield\",\n"
  m: "    ^^^^^^^^                    "
- n: 12
  l: "    \"city\": \"Springfield\",\n"
  m: "              ^^^^^^^^^^^^^^^   "
- n: 13
  l: "    \"state\": \"IL\"\n"
  m: "    ^^^^^^^^^          "
- n: 13
  l: "    \"state\": \"IL\"\n"
  m: "               ^^^^^^  "
- n: 19
  l: "  \"outer\": [\n"
  m: "  ^^^^^^^^^     "
- n: 28
  l: "  \"data\": [\n"
  m: "  ^^^^^^^^     "
- n: 29
  l: "    {\"type\": \"user\", \"id\": 1},\n"
  m: "     ^^^^^^^^                         "
- n: 29
  l: "    {\"type\": \"user\", \"id\": 1},\n"
  m: "               ^^^^^^^^               "
- n: 29
  l: "    {\"type\": \"user\", \"id\": 1},\n"
  m: "                         ^^^^^^       "
- n: 30
  l: "    {\"type\": \"admin\", \"id\": 2},\n"
  m: "     ^^^^^^^^                          "
- n: 30
  l: "    {\"type\": \"admin\", \"id\": 2},\n"
  m: "               ^^^^^^^^^               "
- n: 30
  l: "    {\"type\": \"admin\", \"id\": 2},\n"
  m: "                          ^^^^^^       "
- n: 31
  l: "    {\"type\": \"guest\", \"id\": 3}\n"
  m: "     ^^^^^^^^                         "
- n: 31
  l: "    {\"type\": \"guest\", \"id\": 3}\n"
  m: "               ^^^^^^^^^              "
- n: 31
  l: "    {\"type\": \"guest\", \"id\": 3}\n"
  m: "                          ^^^^^^      "
- n: 37
  l: "  \"name\": \"Jane Doe\",\n"
  m: "  ^^^^^^^^                 "
- n: 37
  l: "  \"name\": \"Jane Doe\",\n"
  m: "            ^^^^^^^^^^^^   "
- n: 38
  l: "  \"description\": \"A person\",\n"
  m: "  ^^^^^^^^^^^^^^^                 "
- n: 38
  l: "  \"description\": \"A person\",\n"
  m: "                   ^^^^^^^^^^^^   "
- n: 39
  l: "  \"bio\": \"Software developer with extensive experience\",\n"
  m: "  ^^^^^^^                                                     "
- n: 39
  l: "  \"bio\": \"Software developer with extensive experience\",\n"
  m: "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   "
- n: 40
  l: "  \"tags\": [\"coding\", \"engineering\", \"AI\"]\n"
  m: "  ^^^^^^^^                                         "
- n: 40
  l: "  \"tags\": [\"coding\", \"engineering\", \"AI\"]\n"
  m: "             ^^^^^^^^^^                            "
- n: 40
  l: "  \"tags\": [\"coding\", \"engineering\", \"AI\"]\n"
  m: "                         ^^^^^^^^^^^^^^^           "
- n: 40
  l: "  \"tags\": [\"coding\", \"engineering\", \"AI\"]\n"
  m: "                                          ^^^^^^   "
- n: 45
  l: "  \"count\": 42,\n"
  m: "  ^^^^^^^^^       "
- n: 46
  l: "  \"score\": 95.5,\n"
  m: "  ^^^^^^^^^         "
- n: 47
  l: "  \"temperature\": -12.5,\n"
  m: "  ^^^^^^^^^^^^^^^          "
- n: 48
  l: "  \"percentage\": 67.8\n"
  m: "  ^^^^^^^^^^^^^^        "
- n: 53
  l: "  \"is_active\": true,\n"
  m: "  ^^^^^^^^^^^^^         "
- n: 54
  l: "  \"is_admin\": false,\n"
  m: "  ^^^^^^^^^^^^          "
- n: 55
  l: "  \"has_permission\": true\n"
  m: "  ^^^^^^^^^^^^^^^^^^        "
- n: 60
  l: "  \"middle_name\": null,\n"
  m: "  ^^^^^^^^^^^^^^^         "
- n: 61
  l: "  \"favorite_color\": null,\n"
  m: "  ^^^^^^^^^^^^^^^^^^         "
- n: 62
  l: "  \"last_login\": null\n"
  m: "  ^^^^^^^^^^^^^^        "
- n: 67
  l: "  \"username\": \"johndoe\",\n"
  m: "  ^^^^^^^^^^^^                "
- n: 67
  l: "  \"username\": \"johndoe\",\n"
  m: "                ^^^^^^^^^^^   "
- n: 68
  l: "  \"email\": \"john@example.com\",\n"
  m: "  ^^^^^^^^^                         "
- n: 68
  l: "  \"email\": \"john@example.com\",\n"
  m: "             ^^^^^^^^^^^^^^^^^^^^   "
- n: 69
  l: "  \"phone\": \"+1-555-0199\",\n"
  m: "  ^^^^^^^^^                    "
- n: 69
  l: "  \"phone\": \"+1-555-0199\",\n"
  m: "             ^^^^^^^^^^^^^^^   "
- n: 70
  l: "  \"website\": \"https://example.com\"\n"
  m: "  ^^^^^^^^^^^                           "
- n: 70
  l: "  \"website\": \"https://example.com\"\n"
  m: "               ^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 75
  l: "  \"values\": [\"first\", \"second\", \"third\"]\n"
  m: "  ^^^^^^^^^^                                      "
- n: 75
  l: "  \"values\": [\"first\", \"second\", \"third\"]\n"
  m: "               ^^^^^^^^^                          "
- n: 75
  l: "  \"values\": [\"first\", \"second\", \"third\"]\n"
  m: "                          ^^^^^^^^^^              "
- n: 75
  l: "  \"values\": [\"first\", \"second\", \"third\"]\n"
  m: "                                      ^^^^^^^^^   "
- n: 80
  l: "  \"path\": \"/Users/john/Documents\",\n"
  m: "  ^^^^^^^^                              "
- n: 80
  l: "  \"path\": \"/Users/john/Documents\",\n"
  m: "            ^^^^^^^^^^^^^^^^^^^^^^^^^   "
- n: 81
  l: "  \"quote\": \"He said: \\\"Hello World\\\"\",\n"
  m: "  ^^^^^^^^^                                     "
- n: 81
  l: "  \"quote\": \"He said: \\\"Hello World\\\"\",\n"
  m: "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   "
- n: 82
  l: "  \"special\": \"Line1\\nLine2\\nLine3\"\n"
  m: "  ^^^^^^^^^^^                             "
- n: 82
  l: "  \"special\": \"Line1\\nLine2\\nLine3\"\n"
  m: "               ^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 87
  l: "  \"string_val\": \"text\",\n"
  m: "  ^^^^^^^^^^^^^^             "
- n: 87
  l: "  \"string_val\": \"text\",\n"
  m: "                  ^^^^^^^^   "
- n: 88
  l: "  \"int_val\": 42,\n"
  m: "  ^^^^^^^^^^^       "
- n: 89
  l: "  \"float_val\": 3.14,\n"
  m: "  ^^^^^^^^^^^^^         "
- n: 90
  l: "  \"bool_val\": true,\n"
  m: "  ^^^^^^^^^^^^         "
- n: 91
  l: "  \"null_val\": null,\n"
  m: "  ^^^^^^^^^^^^         "
- n: 92
  l: "  \"object_val\": {\"key\": \"value\"},\n"
  m: "  ^^^^^^^^^^^^^^                         "
- n: 92
  l: "  \"object_val\": {\"key\": \"value\"},\n"
  m: "                   ^^^^^^^               "
- n: 92
  l: "  \"object_val\": {\"key\": \"value\"},\n"
  m: "                            ^^^^^^^^^    "
- n: 93
  l: "  \"array_val\": [1, 2, 3]\n"
  m: "  ^^^^^^^^^^^^^             "
- n: 98
  l: "  \"user\": {\n"
  m: "  ^^^^^^^^     "
- n: 99
  l: "    \"profile\": {\n"
  m: "    ^^^^^^^^^^^     "
- n: 100
  l: "      \"name\": \"John\",\n"
  m: "      ^^^^^^^^             "
- n: 100
  l: "      \"name\": \"John\",\n"
  m: "                ^^^^^^^^   "
- n: 101
  l: "      \"age\": 30\n"
  m: "      ^^^^^^^      "
- n: 104
  l: "  \"settings\": {\n"
  m: "  ^^^^^^^^^^^^     "
- n: 105
  l: "    \"theme\": \"dark\",\n"
  m: "    ^^^^^^^^^             "
- n: 105
  l: "    \"theme\": \"dark\",\n"
  m: "               ^^^^^^^^   "
- n: 106
  l: "    \"notifications\": true\n"
  m: "    ^^^^^^^^^^^^^^^^^        "
- n: 112
  l: "  \"matrix\": [\n"
  m: "  ^^^^^^^^^^     "
- n: 121
  l: "  \"empty_obj\": {}\n"
  m: "  ^^^^^^^^^^^^^      "
- n: 125
  l: "[\"first\", {\"type\": \"mixed\"}, [1, 2, 3]]\n"
  m: " ^^^^^^^^^                                     "
- n: 125
  l: "[\"first\", {\"type\": \"mixed\"}, [1, 2, 3]]\n"
  m: "             ^^^^^^^^                          "
- n: 125
  l: "[\"first\", {\"type\": \"mixed\"}, [1, 2, 3]]\n"
  m: "                       ^^^^^^^^^               "
- n: 130
  l: "    \"id\": 1,\n"
  m: "    ^^^^^^      "
- n: 131
  l: "    \"name\": \"First\"\n"
  m: "    ^^^^^^^^             "
- n: 131
  l: "    \"name\": \"First\"\n"
  m: "              ^^^^^^^^^  "
- n: 134
  l: "    \"id\": 2,\n"
  m: "    ^^^^^^      "
- n: 135
  l: "    \"name\": \"Second\"\n"
  m: "    ^^^^^^^^              "
- n: 135
  l: "    \"name\": \"Second\"\n"
  m: "              ^^^^^^^^^^  "
- n: 141
  l: "  \"scores\": [10, 20, 30, 40, 50]\n"
  m: "  ^^^^^^^^^^                        "
- n: 146
  l: "  \"measurements\": [1.5, 2.7, 3.9, 4.1]\n"
  m: "  ^^^^^^^^^^^^^^^^                        "
- n: 151
  l: "  \"standard\": \"double-quoted value\"\n"
  m: "  ^^^^^^^^^^^^                           "
- n: 151
  l: "  \"standard\": \"double-quoted value\"\n"
  m: "                ^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 156
  l: "  \"project\": {\n"
  m: "  ^^^^^^^^^^^     "
- n: 157
  l: "    \"name\": \"Test Project\",\n"
  m: "    ^^^^^^^^                     "
- n: 157
  l: "    \"name\": \"Test Project\",\n"
  m: "              ^^^^^^^^^^^^^^^^   "
- n: 158
  l: "    \"settings\": {\n"
  m: "    ^^^^^^^^^^^^     "
- n: 159
  l: "      \"enabled\": true,\n"
  m: "      ^^^^^^^^^^^         "
- n: 160
  l: "      \"priority\": \"high\"\n"
  m: "      ^^^^^^^^^^^^            "
- n: 160
  l: "      \"priority\": \"high\"\n"
  m: "                    ^^^^^^^^  "
- n: 162
  l: "    \"team\": [\n"
  m: "    ^^^^^^^^     "
- n: 164
  l: "        \"name\": \"Alice\",\n"
  m: "        ^^^^^^^^              "
- n: 164
  l: "        \"name\": \"Alice\",\n"
  m: "                  ^^^^^^^^^   "
- n: 165
  l: "        \"role\": \"lead\"\n"
  m: "        ^^^^^^^^            "
- n: 165
  l: "        \"role\": \"lead\"\n"
  m: "                  ^^^^^^^^  "
- n: 168
  l: "        \"name\": \"Bob\",\n"
  m: "        ^^^^^^^^            "
- n: 168
  l: "        \"name\": \"Bob\",\n"
  m: "                  ^^^^^^^   "
- n: 169
  l: "        \"role\": \"developer\"\n"
  m: "        ^^^^^^^^                 "
- n: 169
  l: "        \"role\": \"developer\"\n"
  m: "                  ^^^^^^^^^^^^^  "
